--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
 		<!-- title -->
-		<title>Slack</title>
+		<title>Tic-Tac-Toe</title>
 	</head>
 	<body>
 		<div id="root"></div>
